# breezy

./: .clang-tidy  .gitignore  README.md  lsan.supp  mesa.supp  meson.build
include/breezy/: bz_breezy.h  bz_drm.h  bz_example2_utils.h  bz_example_utils.h  bz_graphics.h  bz_input.h  bz_list.h  bz_logger.h  bz_seat.h
include/glad/: gles2.h
src/: bz_drm.c  bz_graphics.c  bz_input.c  bz_seat.c  main.c  meson.build
src/utils/: bz_example2_utils.c  bz_example_utils.c  bz_list.c  bz_logger.c  meson.build
tests/: meson.build  test_bz_example_utils.c  test_bz_logger.c
